// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeSerialization should write serializer for A 1`] = `
"forall X -> tuple __tact_set(tuple x, X v, int i) asm "SETINDEXVARQ";

() __tact_nop() impure asm "NOP";

slice __tact_str_to_slice(slice s) asm "NOP";

forall X -> X __tact_not_null(X x) { throw_if(128, null?(x)); return x; }

(cell, int) __tact_dict_delete(cell dict, int key_len, slice index) asm(index dict key_len) "DICTDEL";

((cell), ()) __tact_dict_set_ref(cell dict, int key_len, slice index, cell value) asm(value index dict key_len) "DICTSETREF";

(slice, int) __tact_dict_get(cell dict, int key_len, slice index) asm(index dict key_len) "DICTGET" "NULLSWAPIFNOT";

(cell, int) __tact_dict_get_ref(cell dict, int key_len, slice index) asm(index dict key_len) "DICTGETREF" "NULLSWAPIFNOT";

() __tact_debug(int msg) impure inline { int v = msg; v~dump(); }

forall X -> X __tact_debug_str(slice value) impure asm "STRDUMP";

global (int, slice, int) __tact_context;
global cell __tact_context_sys;

(int, slice, int) __tact_context_get() inline { return __tact_context; }

(slice, slice) __tact_load_address(slice cs) inline {
    slice raw = cs~load_msg_addr();
    return (cs, raw);
}

builder __tact_store_address(builder b, slice address) inline {
    b = b.store_slice(address);
    return b;
}

slice __tact_compute_contract_address(int chain, cell code, cell data) {
    var b = begin_cell();
    b = b.store_uint(0, 2);
    b = b.store_uint(3, 2);
    b = b.store_uint(0, 1);
    b = b.store_ref(code);
    b = b.store_ref(data);
    var hash = cell_hash(b.end_cell());
    var b2 = begin_cell();
    b2 = b2.store_uint(2, 2);
    b2 = b2.store_uint(0, 1);
    b2 = b2.store_int(chain, 8);
    b2 = b2.store_uint(hash, 256);
    return b2.end_cell().begin_parse();
}

forall X -> tuple __tact_to_tuple(X x) impure asm "NOP";

forall X -> X __tact_from_tuple(tuple x) impure asm "NOP";

(cell, ()) __tact_dict_set_int_int(cell d, int kl, int k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_builder(d, kl, k, begin_cell().store_int(v, vl)), ());
    }
}

int __tact_dict_get_int_int(cell d, int kl, int k, int vl) {
    var (r, ok) = idict_get?(d, kl, k);
    if (ok) {
        return r~load_int(vl);
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_int_cell(cell d, int kl, int k, cell v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, v), ());
    }
}

cell __tact_dict_get_int_cell(cell d, int kl, int k) {
    var (r, ok) = idict_get_ref?(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_int_slice(cell d, int kl, int k, slice v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set(d, kl, k, v), ());
    }
}

slice __tact_dict_get_int_slice(cell d, int kl, int k) {
    var (r, ok) = idict_get?(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_slice_int(cell d, int kl, slice k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = __tact_dict_delete(d, kl, k);
        return (r, ());
    } else {
        return (dict_set_builder(d, kl, k, begin_cell().store_int(v, vl)), ());
    }
}

int __tact_dict_get_slice_int(cell d, int kl, slice k, int vl) {
    var (r, ok) = __tact_dict_get(d, kl, k);
    if (ok) {
        return r~load_int(vl);
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_slice_cell(cell d, int kl, slice k, cell v) {
    if (null?(v)) {
        var (r, ok) = __tact_dict_delete(d, kl, k);
        return (r, ());
    } else {
        return __tact_dict_set_ref(d, kl, k, v);
    }
}

cell __tact_dict_get_slice_cell(cell d, int kl, slice k) {
    var (r, ok) = __tact_dict_get_ref(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

int __tact_address_eq(slice a, slice b) inline {
    return equal_slice_bits(a, b);
}

int __tact_address_neq(slice a, slice b) inline {
    return ~ equal_slice_bits(a, b);
}

int __tact_cell_eq(cell a, cell b) inline {
    return (a.cell_hash() ==  b.cell_hash());
}

int __tact_cell_neq(slice a, slice b) inline {
    return (a.cell_hash() !=  b.cell_hash());
}

cell __tact_dict_set_code(cell dict, int id, cell code) inline {
    return udict_set_ref(dict, 16, id, code);
}

cell __tact_dict_get_code(cell dict, int id) inline {
    var (data, ok) = udict_get_ref?(dict, 16, id);
    throw_unless(100, ok);
    return data;
}

tuple __tact_tuple_create_0() asm "NIL";

() __tact_tuple_destroy_0() {
    return ();
}

forall X0 -> tuple __tact_tuple_create_1((X0) v) asm "1 TUPLE";

forall X0 -> (X0) __tact_tuple_destroy_1(tuple v) asm "1 UNTUPLE";

forall X0, X1 -> tuple __tact_tuple_create_2((X0, X1) v) asm "2 TUPLE";

forall X0, X1 -> (X0, X1) __tact_tuple_destroy_2(tuple v) asm "2 UNTUPLE";

forall X0, X1, X2 -> tuple __tact_tuple_create_3((X0, X1, X2) v) asm "3 TUPLE";

forall X0, X1, X2 -> (X0, X1, X2) __tact_tuple_destroy_3(tuple v) asm "3 UNTUPLE";

forall X0, X1, X2, X3 -> tuple __tact_tuple_create_4((X0, X1, X2, X3) v) asm "4 TUPLE";

forall X0, X1, X2, X3 -> (X0, X1, X2, X3) __tact_tuple_destroy_4(tuple v) asm "4 UNTUPLE";

forall X0, X1, X2, X3, X4 -> tuple __tact_tuple_create_5((X0, X1, X2, X3, X4) v) asm "5 TUPLE";

forall X0, X1, X2, X3, X4 -> (X0, X1, X2, X3, X4) __tact_tuple_destroy_5(tuple v) asm "5 UNTUPLE";

forall X0, X1, X2, X3, X4, X5 -> tuple __tact_tuple_create_6((X0, X1, X2, X3, X4, X5) v) asm "6 TUPLE";

forall X0, X1, X2, X3, X4, X5 -> (X0, X1, X2, X3, X4, X5) __tact_tuple_destroy_6(tuple v) asm "6 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6 -> tuple __tact_tuple_create_7((X0, X1, X2, X3, X4, X5, X6) v) asm "7 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6 -> (X0, X1, X2, X3, X4, X5, X6) __tact_tuple_destroy_7(tuple v) asm "7 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7 -> tuple __tact_tuple_create_8((X0, X1, X2, X3, X4, X5, X6, X7) v) asm "8 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7 -> (X0, X1, X2, X3, X4, X5, X6, X7) __tact_tuple_destroy_8(tuple v) asm "8 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8 -> tuple __tact_tuple_create_9((X0, X1, X2, X3, X4, X5, X6, X7, X8) v) asm "9 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8) __tact_tuple_destroy_9(tuple v) asm "9 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9 -> tuple __tact_tuple_create_10((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9) v) asm "10 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9) __tact_tuple_destroy_10(tuple v) asm "10 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10 -> tuple __tact_tuple_create_11((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10) v) asm "11 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10) __tact_tuple_destroy_11(tuple v) asm "11 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11 -> tuple __tact_tuple_create_12((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11) v) asm "12 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11) __tact_tuple_destroy_12(tuple v) asm "12 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12 -> tuple __tact_tuple_create_13((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12) v) asm "13 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12) __tact_tuple_destroy_13(tuple v) asm "13 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13 -> tuple __tact_tuple_create_14((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13) v) asm "14 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13) __tact_tuple_destroy_14(tuple v) asm "14 UNTUPLE";

tuple __tact_string_builder_start(int comment) inline {
    builder b = begin_cell();
    if (comment) {
        b = store_uint(b, 0, 32);
    }
    return tpush(tpush(empty_tuple(), b), null());
}

tuple __tact_string_builder_start_comment() inline {
    return __tact_string_builder_start(true);
}

tuple __tact_string_builder_start_string() inline {
    return __tact_string_builder_start(false);
}

cell __tact_string_builder_end(tuple builders) {
    (builder b, tuple tail) = uncons(builders);
    cell c = b.end_cell();
    while(~ null?(tail)) {
        (b, tail) = uncons(tail);
        c = b.store_ref(c).end_cell();
    }
    return c;
}

slice __tact_string_builder_end_slice(tuple builders) {
    return __tact_string_builder_end(builders).begin_parse();
}

((tuple), ()) __tact_string_builder_append(tuple builders, slice sc) {
    int sliceRefs = slice_refs(sc);
    int sliceBits = slice_bits(sc);
    
    while((sliceBits > 0) | (sliceRefs > 0)) {
        
        ;; Load the current builder
        (builder b, tuple tail) = uncons(builders);
        int remBytes = 127 - (builder_bits(b) / 8);
        int exBytes = sliceBits / 8;
        
        ;; Append bits
        int amount = min(remBytes, exBytes);
        if (amount > 0) {
            slice read = sc~load_bits(amount * 8);
            b = b.store_slice(read);
        }
        
        ;; Update builders
        builders = cons(b, tail);
        
        ;; Check if we need to add a new cell and continue
        if (exBytes - amount > 0) {
            var bb = begin_cell();
            builders = cons(bb, builders);
            sliceBits = (exBytes - amount) * 8;
        } elseif (sliceRefs > 0) {
            sc = sc~load_ref().begin_parse();
            sliceRefs = slice_refs(sc);
            sliceBits = slice_bits(sc);
        } else {
            sliceBits = 0;
            sliceRefs = 0;
        }
    }
    
    return ((builders), ());
}

slice __tact_int_to_string(int src) {
    var b = begin_cell();
    if (src < 0) {
        b = b.store_uint(45, 8);
        src = - src;
    }
    
    if (src < 1000000000000000000000000000000) {
        int len = 0;
        int value = 0;
        int mult = 1;
        do {
            (src, int res) = src.divmod(10);
            value = value + (res + 48) * mult;
            mult = mult * 256;
            len = len + 1;
        } until (src == 0);
        
        b = b.store_uint(value, len * 8);
    } else {
        tuple t = empty_tuple();
        int len = 0;
        do {
            int digit = src % 10;
            t~tpush(digit);
            len = len + 1;
            src = src / 10;
        } until (src == 0);
        
        int c = len - 1;
        repeat(len) {
            int v = t.at(c);
            b = b.store_uint(v + 48, 8);
            c = c - 1;
        }
    }
    return b.end_cell().begin_parse();
}

slice __tact_float_to_string(int src, int digits) {
    throw_if(134, (digits <= 0) | (digits > 77));
    builder b = begin_cell();
    
    if (src < 0) {
        b = b.store_uint(45, 8);
        src = - src;
    }
    
    ;; Process rem part
    int skip = true;
    int len = 0;
    int rem = 0;
    tuple t = empty_tuple();
    repeat(digits) {
        (src, rem) = src.divmod(10);
        if ( ~ ( skip & ( rem == 0 ) ) ) {
            skip = false;
            t~tpush(rem + 48);
            len = len + 1;
        }
    }
    
    ;; Process dot
    if (~ skip) {
        t~tpush(46);
        len = len + 1;
    }
    
    do {
        (src, rem) = src.divmod(10);
        t~tpush(rem + 48);
        len = len + 1;
    } until (src == 0);
    
    int c = len - 1;
    repeat(len) {
        int v = t.at(c);
        b = b.store_uint(v, 8);
        c = c - 1;
    }
    ;; Result
    return b.end_cell().begin_parse();
}

builder __gen_write_A(builder build_0, (int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    build_0 = store_int(build_0, v'a, 257);
    build_0 = store_int(build_0, v'b, 257);
    if (null?(v'c)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'c, 257);
    }
    build_0 = store_int(build_0, v'd, 1);
    if (null?(v'e)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'e, 1);
    }
    var build_1 = begin_cell();
    build_1 = store_int(build_1, v'f, 257);
    build_1 = store_int(build_1, v'g, 257);
    build_0 = store_ref(build_0, build_1.end_cell());
    return build_0;
}

cell __gen_writecell_A((int, int, int, int, int, int, int) v) inline {
    return __gen_write_A(begin_cell(), v).end_cell();
}

slice __gen_writeslice_A((int, int, int, int, int, int, int) v}) inline {
    return __gen_writecell_A(v).begin_parse();
}

((int, int, int, int, int, int, int)) __gen_A_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_7(v);
}

cell __gen_writecellopt_A(tuple v) inline {
    if (null?(v)) {
        return null();
    }
    return __gen_writecell_A(__gen_A_not_null(v));
}

_ __gen_A_get_a((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'a;
}

_ __gen_A_get_b((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'b;
}

_ __gen_A_get_c((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'c;
}

_ __gen_A_get_d((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'd;
}

_ __gen_A_get_e((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'e;
}

_ __gen_A_get_f((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'f;
}

_ __gen_A_get_g((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'g;
}

((int, int, int, int, int, int, int)) __gen_A_unpack((int, int, int, int, int, int, int) v) asm "NOP";

tuple __gen_A_as_optional(((int, int, int, int, int, int, int)) v) {
    return __tact_tuple_create_7(v);
}

_ __gen_B_get_a((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'a;
}

_ __gen_B_get_b((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'b;
}

_ __gen_B_get_c((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'c;
}

_ __gen_B_get_d((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'd;
}

_ __gen_B_get_e((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'e;
}

_ __gen_B_get_f((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'f;
}

_ __gen_B_get_g((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'g;
}

((int, int, int, int, int, int, int)) __gen_B_unpack((int, int, int, int, int, int, int) v) asm "NOP";

((int, int, int, int, int, int, int)) __gen_B_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_7(v);
}

tuple __gen_B_as_optional(((int, int, int, int, int, int, int)) v) {
    return __tact_tuple_create_7(v);
}

_ __gen_C_get_a((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'a;
}

_ __gen_C_get_b((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'b;
}

_ __gen_C_get_c((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'c;
}

_ __gen_C_get_d((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'd;
}

_ __gen_C_get_e((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'e;
}

_ __gen_C_get_f((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'f;
}

_ __gen_C_get_g((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'g;
}

_ __gen_C_get_h((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'h;
}

((cell, cell, slice, slice, int, int, int, slice)) __gen_C_unpack((cell, cell, slice, slice, int, int, int, slice) v) asm "NOP";

((cell, cell, slice, slice, int, int, int, slice)) __gen_C_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_8(v);
}

tuple __gen_C_as_optional(((cell, cell, slice, slice, int, int, int, slice)) v) {
    return __tact_tuple_create_8(v);
}

(slice, ((int, int, int, int, int, int, int))) __gen_read_A(slice sc_0) inline {
    var v'a = sc_0~load_int(257);
    var v'b = sc_0~load_int(257);
    var v'c = null();
    if (sc_0~load_int(1)) {
        v'c = sc_0~load_int(257);
    }
    var v'd = sc_0~load_int(1);
    var v'e = null();
    if (sc_0~load_int(1)) {
        v'e = sc_0~load_int(1);
    }
    slice sc_1 = sc_0~load_ref().begin_parse();
    var v'f = sc_1~load_int(257);
    var v'g = sc_1~load_int(257);
    return (sc_0, (v'a, v'b, v'c, v'd, v'e, v'f, v'g));
}

tuple __gen_readopt_A(cell cl) inline {
    if (null?(cl)) {
        return null();
    }
    var sc_0 = cl.begin_parse();
    var v'a = sc_0~load_int(257);
    var v'b = sc_0~load_int(257);
    var v'c = null();
    if (sc_0~load_int(1)) {
        v'c = sc_0~load_int(257);
    }
    var v'd = sc_0~load_int(1);
    var v'e = null();
    if (sc_0~load_int(1)) {
        v'e = sc_0~load_int(1);
    }
    slice sc_1 = sc_0~load_ref().begin_parse();
    var v'f = sc_1~load_int(257);
    var v'g = sc_1~load_int(257);
    return __tact_tuple_create_7(v'a, v'b, v'c, v'd, v'e, v'f, v'g);
}"
`;

exports[`writeSerialization should write serializer for B 1`] = `
"forall X -> tuple __tact_set(tuple x, X v, int i) asm "SETINDEXVARQ";

() __tact_nop() impure asm "NOP";

slice __tact_str_to_slice(slice s) asm "NOP";

forall X -> X __tact_not_null(X x) { throw_if(128, null?(x)); return x; }

(cell, int) __tact_dict_delete(cell dict, int key_len, slice index) asm(index dict key_len) "DICTDEL";

((cell), ()) __tact_dict_set_ref(cell dict, int key_len, slice index, cell value) asm(value index dict key_len) "DICTSETREF";

(slice, int) __tact_dict_get(cell dict, int key_len, slice index) asm(index dict key_len) "DICTGET" "NULLSWAPIFNOT";

(cell, int) __tact_dict_get_ref(cell dict, int key_len, slice index) asm(index dict key_len) "DICTGETREF" "NULLSWAPIFNOT";

() __tact_debug(int msg) impure inline { int v = msg; v~dump(); }

forall X -> X __tact_debug_str(slice value) impure asm "STRDUMP";

global (int, slice, int) __tact_context;
global cell __tact_context_sys;

(int, slice, int) __tact_context_get() inline { return __tact_context; }

(slice, slice) __tact_load_address(slice cs) inline {
    slice raw = cs~load_msg_addr();
    return (cs, raw);
}

builder __tact_store_address(builder b, slice address) inline {
    b = b.store_slice(address);
    return b;
}

slice __tact_compute_contract_address(int chain, cell code, cell data) {
    var b = begin_cell();
    b = b.store_uint(0, 2);
    b = b.store_uint(3, 2);
    b = b.store_uint(0, 1);
    b = b.store_ref(code);
    b = b.store_ref(data);
    var hash = cell_hash(b.end_cell());
    var b2 = begin_cell();
    b2 = b2.store_uint(2, 2);
    b2 = b2.store_uint(0, 1);
    b2 = b2.store_int(chain, 8);
    b2 = b2.store_uint(hash, 256);
    return b2.end_cell().begin_parse();
}

forall X -> tuple __tact_to_tuple(X x) impure asm "NOP";

forall X -> X __tact_from_tuple(tuple x) impure asm "NOP";

(cell, ()) __tact_dict_set_int_int(cell d, int kl, int k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_builder(d, kl, k, begin_cell().store_int(v, vl)), ());
    }
}

int __tact_dict_get_int_int(cell d, int kl, int k, int vl) {
    var (r, ok) = idict_get?(d, kl, k);
    if (ok) {
        return r~load_int(vl);
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_int_cell(cell d, int kl, int k, cell v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, v), ());
    }
}

cell __tact_dict_get_int_cell(cell d, int kl, int k) {
    var (r, ok) = idict_get_ref?(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_int_slice(cell d, int kl, int k, slice v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set(d, kl, k, v), ());
    }
}

slice __tact_dict_get_int_slice(cell d, int kl, int k) {
    var (r, ok) = idict_get?(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_slice_int(cell d, int kl, slice k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = __tact_dict_delete(d, kl, k);
        return (r, ());
    } else {
        return (dict_set_builder(d, kl, k, begin_cell().store_int(v, vl)), ());
    }
}

int __tact_dict_get_slice_int(cell d, int kl, slice k, int vl) {
    var (r, ok) = __tact_dict_get(d, kl, k);
    if (ok) {
        return r~load_int(vl);
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_slice_cell(cell d, int kl, slice k, cell v) {
    if (null?(v)) {
        var (r, ok) = __tact_dict_delete(d, kl, k);
        return (r, ());
    } else {
        return __tact_dict_set_ref(d, kl, k, v);
    }
}

cell __tact_dict_get_slice_cell(cell d, int kl, slice k) {
    var (r, ok) = __tact_dict_get_ref(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

int __tact_address_eq(slice a, slice b) inline {
    return equal_slice_bits(a, b);
}

int __tact_address_neq(slice a, slice b) inline {
    return ~ equal_slice_bits(a, b);
}

int __tact_cell_eq(cell a, cell b) inline {
    return (a.cell_hash() ==  b.cell_hash());
}

int __tact_cell_neq(slice a, slice b) inline {
    return (a.cell_hash() !=  b.cell_hash());
}

cell __tact_dict_set_code(cell dict, int id, cell code) inline {
    return udict_set_ref(dict, 16, id, code);
}

cell __tact_dict_get_code(cell dict, int id) inline {
    var (data, ok) = udict_get_ref?(dict, 16, id);
    throw_unless(100, ok);
    return data;
}

tuple __tact_tuple_create_0() asm "NIL";

() __tact_tuple_destroy_0() {
    return ();
}

forall X0 -> tuple __tact_tuple_create_1((X0) v) asm "1 TUPLE";

forall X0 -> (X0) __tact_tuple_destroy_1(tuple v) asm "1 UNTUPLE";

forall X0, X1 -> tuple __tact_tuple_create_2((X0, X1) v) asm "2 TUPLE";

forall X0, X1 -> (X0, X1) __tact_tuple_destroy_2(tuple v) asm "2 UNTUPLE";

forall X0, X1, X2 -> tuple __tact_tuple_create_3((X0, X1, X2) v) asm "3 TUPLE";

forall X0, X1, X2 -> (X0, X1, X2) __tact_tuple_destroy_3(tuple v) asm "3 UNTUPLE";

forall X0, X1, X2, X3 -> tuple __tact_tuple_create_4((X0, X1, X2, X3) v) asm "4 TUPLE";

forall X0, X1, X2, X3 -> (X0, X1, X2, X3) __tact_tuple_destroy_4(tuple v) asm "4 UNTUPLE";

forall X0, X1, X2, X3, X4 -> tuple __tact_tuple_create_5((X0, X1, X2, X3, X4) v) asm "5 TUPLE";

forall X0, X1, X2, X3, X4 -> (X0, X1, X2, X3, X4) __tact_tuple_destroy_5(tuple v) asm "5 UNTUPLE";

forall X0, X1, X2, X3, X4, X5 -> tuple __tact_tuple_create_6((X0, X1, X2, X3, X4, X5) v) asm "6 TUPLE";

forall X0, X1, X2, X3, X4, X5 -> (X0, X1, X2, X3, X4, X5) __tact_tuple_destroy_6(tuple v) asm "6 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6 -> tuple __tact_tuple_create_7((X0, X1, X2, X3, X4, X5, X6) v) asm "7 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6 -> (X0, X1, X2, X3, X4, X5, X6) __tact_tuple_destroy_7(tuple v) asm "7 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7 -> tuple __tact_tuple_create_8((X0, X1, X2, X3, X4, X5, X6, X7) v) asm "8 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7 -> (X0, X1, X2, X3, X4, X5, X6, X7) __tact_tuple_destroy_8(tuple v) asm "8 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8 -> tuple __tact_tuple_create_9((X0, X1, X2, X3, X4, X5, X6, X7, X8) v) asm "9 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8) __tact_tuple_destroy_9(tuple v) asm "9 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9 -> tuple __tact_tuple_create_10((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9) v) asm "10 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9) __tact_tuple_destroy_10(tuple v) asm "10 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10 -> tuple __tact_tuple_create_11((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10) v) asm "11 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10) __tact_tuple_destroy_11(tuple v) asm "11 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11 -> tuple __tact_tuple_create_12((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11) v) asm "12 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11) __tact_tuple_destroy_12(tuple v) asm "12 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12 -> tuple __tact_tuple_create_13((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12) v) asm "13 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12) __tact_tuple_destroy_13(tuple v) asm "13 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13 -> tuple __tact_tuple_create_14((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13) v) asm "14 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13) __tact_tuple_destroy_14(tuple v) asm "14 UNTUPLE";

tuple __tact_string_builder_start(int comment) inline {
    builder b = begin_cell();
    if (comment) {
        b = store_uint(b, 0, 32);
    }
    return tpush(tpush(empty_tuple(), b), null());
}

tuple __tact_string_builder_start_comment() inline {
    return __tact_string_builder_start(true);
}

tuple __tact_string_builder_start_string() inline {
    return __tact_string_builder_start(false);
}

cell __tact_string_builder_end(tuple builders) {
    (builder b, tuple tail) = uncons(builders);
    cell c = b.end_cell();
    while(~ null?(tail)) {
        (b, tail) = uncons(tail);
        c = b.store_ref(c).end_cell();
    }
    return c;
}

slice __tact_string_builder_end_slice(tuple builders) {
    return __tact_string_builder_end(builders).begin_parse();
}

((tuple), ()) __tact_string_builder_append(tuple builders, slice sc) {
    int sliceRefs = slice_refs(sc);
    int sliceBits = slice_bits(sc);
    
    while((sliceBits > 0) | (sliceRefs > 0)) {
        
        ;; Load the current builder
        (builder b, tuple tail) = uncons(builders);
        int remBytes = 127 - (builder_bits(b) / 8);
        int exBytes = sliceBits / 8;
        
        ;; Append bits
        int amount = min(remBytes, exBytes);
        if (amount > 0) {
            slice read = sc~load_bits(amount * 8);
            b = b.store_slice(read);
        }
        
        ;; Update builders
        builders = cons(b, tail);
        
        ;; Check if we need to add a new cell and continue
        if (exBytes - amount > 0) {
            var bb = begin_cell();
            builders = cons(bb, builders);
            sliceBits = (exBytes - amount) * 8;
        } elseif (sliceRefs > 0) {
            sc = sc~load_ref().begin_parse();
            sliceRefs = slice_refs(sc);
            sliceBits = slice_bits(sc);
        } else {
            sliceBits = 0;
            sliceRefs = 0;
        }
    }
    
    return ((builders), ());
}

slice __tact_int_to_string(int src) {
    var b = begin_cell();
    if (src < 0) {
        b = b.store_uint(45, 8);
        src = - src;
    }
    
    if (src < 1000000000000000000000000000000) {
        int len = 0;
        int value = 0;
        int mult = 1;
        do {
            (src, int res) = src.divmod(10);
            value = value + (res + 48) * mult;
            mult = mult * 256;
            len = len + 1;
        } until (src == 0);
        
        b = b.store_uint(value, len * 8);
    } else {
        tuple t = empty_tuple();
        int len = 0;
        do {
            int digit = src % 10;
            t~tpush(digit);
            len = len + 1;
            src = src / 10;
        } until (src == 0);
        
        int c = len - 1;
        repeat(len) {
            int v = t.at(c);
            b = b.store_uint(v + 48, 8);
            c = c - 1;
        }
    }
    return b.end_cell().begin_parse();
}

slice __tact_float_to_string(int src, int digits) {
    throw_if(134, (digits <= 0) | (digits > 77));
    builder b = begin_cell();
    
    if (src < 0) {
        b = b.store_uint(45, 8);
        src = - src;
    }
    
    ;; Process rem part
    int skip = true;
    int len = 0;
    int rem = 0;
    tuple t = empty_tuple();
    repeat(digits) {
        (src, rem) = src.divmod(10);
        if ( ~ ( skip & ( rem == 0 ) ) ) {
            skip = false;
            t~tpush(rem + 48);
            len = len + 1;
        }
    }
    
    ;; Process dot
    if (~ skip) {
        t~tpush(46);
        len = len + 1;
    }
    
    do {
        (src, rem) = src.divmod(10);
        t~tpush(rem + 48);
        len = len + 1;
    } until (src == 0);
    
    int c = len - 1;
    repeat(len) {
        int v = t.at(c);
        b = b.store_uint(v, 8);
        c = c - 1;
    }
    ;; Result
    return b.end_cell().begin_parse();
}

builder __gen_write_B(builder build_0, (int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    build_0 = store_int(build_0, v'a, 257);
    build_0 = store_int(build_0, v'b, 257);
    if (null?(v'c)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'c, 257);
    }
    build_0 = store_int(build_0, v'd, 1);
    if (null?(v'e)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_int(build_0, v'e, 1);
    }
    var build_1 = begin_cell();
    build_1 = store_int(build_1, v'f, 257);
    build_1 = store_int(build_1, v'g, 257);
    build_0 = store_ref(build_0, build_1.end_cell());
    return build_0;
}

cell __gen_writecell_B((int, int, int, int, int, int, int) v) inline {
    return __gen_write_B(begin_cell(), v).end_cell();
}

slice __gen_writeslice_B((int, int, int, int, int, int, int) v}) inline {
    return __gen_writecell_B(v).begin_parse();
}

((int, int, int, int, int, int, int)) __gen_B_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_7(v);
}

cell __gen_writecellopt_B(tuple v) inline {
    if (null?(v)) {
        return null();
    }
    return __gen_writecell_B(__gen_B_not_null(v));
}

_ __gen_A_get_a((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'a;
}

_ __gen_A_get_b((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'b;
}

_ __gen_A_get_c((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'c;
}

_ __gen_A_get_d((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'd;
}

_ __gen_A_get_e((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'e;
}

_ __gen_A_get_f((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'f;
}

_ __gen_A_get_g((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'g;
}

((int, int, int, int, int, int, int)) __gen_A_unpack((int, int, int, int, int, int, int) v) asm "NOP";

((int, int, int, int, int, int, int)) __gen_A_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_7(v);
}

tuple __gen_A_as_optional(((int, int, int, int, int, int, int)) v) {
    return __tact_tuple_create_7(v);
}

_ __gen_B_get_a((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'a;
}

_ __gen_B_get_b((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'b;
}

_ __gen_B_get_c((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'c;
}

_ __gen_B_get_d((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'd;
}

_ __gen_B_get_e((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'e;
}

_ __gen_B_get_f((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'f;
}

_ __gen_B_get_g((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'g;
}

((int, int, int, int, int, int, int)) __gen_B_unpack((int, int, int, int, int, int, int) v) asm "NOP";

tuple __gen_B_as_optional(((int, int, int, int, int, int, int)) v) {
    return __tact_tuple_create_7(v);
}

_ __gen_C_get_a((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'a;
}

_ __gen_C_get_b((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'b;
}

_ __gen_C_get_c((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'c;
}

_ __gen_C_get_d((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'd;
}

_ __gen_C_get_e((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'e;
}

_ __gen_C_get_f((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'f;
}

_ __gen_C_get_g((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'g;
}

_ __gen_C_get_h((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'h;
}

((cell, cell, slice, slice, int, int, int, slice)) __gen_C_unpack((cell, cell, slice, slice, int, int, int, slice) v) asm "NOP";

((cell, cell, slice, slice, int, int, int, slice)) __gen_C_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_8(v);
}

tuple __gen_C_as_optional(((cell, cell, slice, slice, int, int, int, slice)) v) {
    return __tact_tuple_create_8(v);
}

(slice, ((int, int, int, int, int, int, int))) __gen_read_B(slice sc_0) inline {
    var v'a = sc_0~load_int(257);
    var v'b = sc_0~load_int(257);
    var v'c = null();
    if (sc_0~load_int(1)) {
        v'c = sc_0~load_int(257);
    }
    var v'd = sc_0~load_int(1);
    var v'e = null();
    if (sc_0~load_int(1)) {
        v'e = sc_0~load_int(1);
    }
    slice sc_1 = sc_0~load_ref().begin_parse();
    var v'f = sc_1~load_int(257);
    var v'g = sc_1~load_int(257);
    return (sc_0, (v'a, v'b, v'c, v'd, v'e, v'f, v'g));
}

tuple __gen_readopt_B(cell cl) inline {
    if (null?(cl)) {
        return null();
    }
    var sc_0 = cl.begin_parse();
    var v'a = sc_0~load_int(257);
    var v'b = sc_0~load_int(257);
    var v'c = null();
    if (sc_0~load_int(1)) {
        v'c = sc_0~load_int(257);
    }
    var v'd = sc_0~load_int(1);
    var v'e = null();
    if (sc_0~load_int(1)) {
        v'e = sc_0~load_int(1);
    }
    slice sc_1 = sc_0~load_ref().begin_parse();
    var v'f = sc_1~load_int(257);
    var v'g = sc_1~load_int(257);
    return __tact_tuple_create_7(v'a, v'b, v'c, v'd, v'e, v'f, v'g);
}"
`;

exports[`writeSerialization should write serializer for C 1`] = `
"forall X -> tuple __tact_set(tuple x, X v, int i) asm "SETINDEXVARQ";

() __tact_nop() impure asm "NOP";

slice __tact_str_to_slice(slice s) asm "NOP";

forall X -> X __tact_not_null(X x) { throw_if(128, null?(x)); return x; }

(cell, int) __tact_dict_delete(cell dict, int key_len, slice index) asm(index dict key_len) "DICTDEL";

((cell), ()) __tact_dict_set_ref(cell dict, int key_len, slice index, cell value) asm(value index dict key_len) "DICTSETREF";

(slice, int) __tact_dict_get(cell dict, int key_len, slice index) asm(index dict key_len) "DICTGET" "NULLSWAPIFNOT";

(cell, int) __tact_dict_get_ref(cell dict, int key_len, slice index) asm(index dict key_len) "DICTGETREF" "NULLSWAPIFNOT";

() __tact_debug(int msg) impure inline { int v = msg; v~dump(); }

forall X -> X __tact_debug_str(slice value) impure asm "STRDUMP";

global (int, slice, int) __tact_context;
global cell __tact_context_sys;

(int, slice, int) __tact_context_get() inline { return __tact_context; }

(slice, slice) __tact_load_address(slice cs) inline {
    slice raw = cs~load_msg_addr();
    return (cs, raw);
}

builder __tact_store_address(builder b, slice address) inline {
    b = b.store_slice(address);
    return b;
}

slice __tact_compute_contract_address(int chain, cell code, cell data) {
    var b = begin_cell();
    b = b.store_uint(0, 2);
    b = b.store_uint(3, 2);
    b = b.store_uint(0, 1);
    b = b.store_ref(code);
    b = b.store_ref(data);
    var hash = cell_hash(b.end_cell());
    var b2 = begin_cell();
    b2 = b2.store_uint(2, 2);
    b2 = b2.store_uint(0, 1);
    b2 = b2.store_int(chain, 8);
    b2 = b2.store_uint(hash, 256);
    return b2.end_cell().begin_parse();
}

forall X -> tuple __tact_to_tuple(X x) impure asm "NOP";

forall X -> X __tact_from_tuple(tuple x) impure asm "NOP";

(cell, ()) __tact_dict_set_int_int(cell d, int kl, int k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_builder(d, kl, k, begin_cell().store_int(v, vl)), ());
    }
}

int __tact_dict_get_int_int(cell d, int kl, int k, int vl) {
    var (r, ok) = idict_get?(d, kl, k);
    if (ok) {
        return r~load_int(vl);
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_int_cell(cell d, int kl, int k, cell v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set_ref(d, kl, k, v), ());
    }
}

cell __tact_dict_get_int_cell(cell d, int kl, int k) {
    var (r, ok) = idict_get_ref?(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_int_slice(cell d, int kl, int k, slice v) {
    if (null?(v)) {
        var (r, ok) = idict_delete?(d, kl, k);
        return (r, ());
    } else {
        return (idict_set(d, kl, k, v), ());
    }
}

slice __tact_dict_get_int_slice(cell d, int kl, int k) {
    var (r, ok) = idict_get?(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_slice_int(cell d, int kl, slice k, int v, int vl) {
    if (null?(v)) {
        var (r, ok) = __tact_dict_delete(d, kl, k);
        return (r, ());
    } else {
        return (dict_set_builder(d, kl, k, begin_cell().store_int(v, vl)), ());
    }
}

int __tact_dict_get_slice_int(cell d, int kl, slice k, int vl) {
    var (r, ok) = __tact_dict_get(d, kl, k);
    if (ok) {
        return r~load_int(vl);
    } else {
        return null();
    }
}

(cell, ()) __tact_dict_set_slice_cell(cell d, int kl, slice k, cell v) {
    if (null?(v)) {
        var (r, ok) = __tact_dict_delete(d, kl, k);
        return (r, ());
    } else {
        return __tact_dict_set_ref(d, kl, k, v);
    }
}

cell __tact_dict_get_slice_cell(cell d, int kl, slice k) {
    var (r, ok) = __tact_dict_get_ref(d, kl, k);
    if (ok) {
        return r;
    } else {
        return null();
    }
}

int __tact_address_eq(slice a, slice b) inline {
    return equal_slice_bits(a, b);
}

int __tact_address_neq(slice a, slice b) inline {
    return ~ equal_slice_bits(a, b);
}

int __tact_cell_eq(cell a, cell b) inline {
    return (a.cell_hash() ==  b.cell_hash());
}

int __tact_cell_neq(slice a, slice b) inline {
    return (a.cell_hash() !=  b.cell_hash());
}

cell __tact_dict_set_code(cell dict, int id, cell code) inline {
    return udict_set_ref(dict, 16, id, code);
}

cell __tact_dict_get_code(cell dict, int id) inline {
    var (data, ok) = udict_get_ref?(dict, 16, id);
    throw_unless(100, ok);
    return data;
}

tuple __tact_tuple_create_0() asm "NIL";

() __tact_tuple_destroy_0() {
    return ();
}

forall X0 -> tuple __tact_tuple_create_1((X0) v) asm "1 TUPLE";

forall X0 -> (X0) __tact_tuple_destroy_1(tuple v) asm "1 UNTUPLE";

forall X0, X1 -> tuple __tact_tuple_create_2((X0, X1) v) asm "2 TUPLE";

forall X0, X1 -> (X0, X1) __tact_tuple_destroy_2(tuple v) asm "2 UNTUPLE";

forall X0, X1, X2 -> tuple __tact_tuple_create_3((X0, X1, X2) v) asm "3 TUPLE";

forall X0, X1, X2 -> (X0, X1, X2) __tact_tuple_destroy_3(tuple v) asm "3 UNTUPLE";

forall X0, X1, X2, X3 -> tuple __tact_tuple_create_4((X0, X1, X2, X3) v) asm "4 TUPLE";

forall X0, X1, X2, X3 -> (X0, X1, X2, X3) __tact_tuple_destroy_4(tuple v) asm "4 UNTUPLE";

forall X0, X1, X2, X3, X4 -> tuple __tact_tuple_create_5((X0, X1, X2, X3, X4) v) asm "5 TUPLE";

forall X0, X1, X2, X3, X4 -> (X0, X1, X2, X3, X4) __tact_tuple_destroy_5(tuple v) asm "5 UNTUPLE";

forall X0, X1, X2, X3, X4, X5 -> tuple __tact_tuple_create_6((X0, X1, X2, X3, X4, X5) v) asm "6 TUPLE";

forall X0, X1, X2, X3, X4, X5 -> (X0, X1, X2, X3, X4, X5) __tact_tuple_destroy_6(tuple v) asm "6 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6 -> tuple __tact_tuple_create_7((X0, X1, X2, X3, X4, X5, X6) v) asm "7 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6 -> (X0, X1, X2, X3, X4, X5, X6) __tact_tuple_destroy_7(tuple v) asm "7 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7 -> tuple __tact_tuple_create_8((X0, X1, X2, X3, X4, X5, X6, X7) v) asm "8 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7 -> (X0, X1, X2, X3, X4, X5, X6, X7) __tact_tuple_destroy_8(tuple v) asm "8 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8 -> tuple __tact_tuple_create_9((X0, X1, X2, X3, X4, X5, X6, X7, X8) v) asm "9 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8) __tact_tuple_destroy_9(tuple v) asm "9 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9 -> tuple __tact_tuple_create_10((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9) v) asm "10 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9) __tact_tuple_destroy_10(tuple v) asm "10 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10 -> tuple __tact_tuple_create_11((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10) v) asm "11 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10) __tact_tuple_destroy_11(tuple v) asm "11 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11 -> tuple __tact_tuple_create_12((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11) v) asm "12 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11) __tact_tuple_destroy_12(tuple v) asm "12 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12 -> tuple __tact_tuple_create_13((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12) v) asm "13 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12) __tact_tuple_destroy_13(tuple v) asm "13 UNTUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13 -> tuple __tact_tuple_create_14((X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13) v) asm "14 TUPLE";

forall X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13 -> (X0, X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13) __tact_tuple_destroy_14(tuple v) asm "14 UNTUPLE";

tuple __tact_string_builder_start(int comment) inline {
    builder b = begin_cell();
    if (comment) {
        b = store_uint(b, 0, 32);
    }
    return tpush(tpush(empty_tuple(), b), null());
}

tuple __tact_string_builder_start_comment() inline {
    return __tact_string_builder_start(true);
}

tuple __tact_string_builder_start_string() inline {
    return __tact_string_builder_start(false);
}

cell __tact_string_builder_end(tuple builders) {
    (builder b, tuple tail) = uncons(builders);
    cell c = b.end_cell();
    while(~ null?(tail)) {
        (b, tail) = uncons(tail);
        c = b.store_ref(c).end_cell();
    }
    return c;
}

slice __tact_string_builder_end_slice(tuple builders) {
    return __tact_string_builder_end(builders).begin_parse();
}

((tuple), ()) __tact_string_builder_append(tuple builders, slice sc) {
    int sliceRefs = slice_refs(sc);
    int sliceBits = slice_bits(sc);
    
    while((sliceBits > 0) | (sliceRefs > 0)) {
        
        ;; Load the current builder
        (builder b, tuple tail) = uncons(builders);
        int remBytes = 127 - (builder_bits(b) / 8);
        int exBytes = sliceBits / 8;
        
        ;; Append bits
        int amount = min(remBytes, exBytes);
        if (amount > 0) {
            slice read = sc~load_bits(amount * 8);
            b = b.store_slice(read);
        }
        
        ;; Update builders
        builders = cons(b, tail);
        
        ;; Check if we need to add a new cell and continue
        if (exBytes - amount > 0) {
            var bb = begin_cell();
            builders = cons(bb, builders);
            sliceBits = (exBytes - amount) * 8;
        } elseif (sliceRefs > 0) {
            sc = sc~load_ref().begin_parse();
            sliceRefs = slice_refs(sc);
            sliceBits = slice_bits(sc);
        } else {
            sliceBits = 0;
            sliceRefs = 0;
        }
    }
    
    return ((builders), ());
}

slice __tact_int_to_string(int src) {
    var b = begin_cell();
    if (src < 0) {
        b = b.store_uint(45, 8);
        src = - src;
    }
    
    if (src < 1000000000000000000000000000000) {
        int len = 0;
        int value = 0;
        int mult = 1;
        do {
            (src, int res) = src.divmod(10);
            value = value + (res + 48) * mult;
            mult = mult * 256;
            len = len + 1;
        } until (src == 0);
        
        b = b.store_uint(value, len * 8);
    } else {
        tuple t = empty_tuple();
        int len = 0;
        do {
            int digit = src % 10;
            t~tpush(digit);
            len = len + 1;
            src = src / 10;
        } until (src == 0);
        
        int c = len - 1;
        repeat(len) {
            int v = t.at(c);
            b = b.store_uint(v + 48, 8);
            c = c - 1;
        }
    }
    return b.end_cell().begin_parse();
}

slice __tact_float_to_string(int src, int digits) {
    throw_if(134, (digits <= 0) | (digits > 77));
    builder b = begin_cell();
    
    if (src < 0) {
        b = b.store_uint(45, 8);
        src = - src;
    }
    
    ;; Process rem part
    int skip = true;
    int len = 0;
    int rem = 0;
    tuple t = empty_tuple();
    repeat(digits) {
        (src, rem) = src.divmod(10);
        if ( ~ ( skip & ( rem == 0 ) ) ) {
            skip = false;
            t~tpush(rem + 48);
            len = len + 1;
        }
    }
    
    ;; Process dot
    if (~ skip) {
        t~tpush(46);
        len = len + 1;
    }
    
    do {
        (src, rem) = src.divmod(10);
        t~tpush(rem + 48);
        len = len + 1;
    } until (src == 0);
    
    int c = len - 1;
    repeat(len) {
        int v = t.at(c);
        b = b.store_uint(v, 8);
        c = c - 1;
    }
    ;; Result
    return b.end_cell().begin_parse();
}

builder __gen_write_C(builder build_0, (cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    build_0 = store_ref(build_0, v'a);
    if (null?(v'b)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_ref(build_0, v'b);
    }
    if (null?(v'c)) {
        build_0 = store_int(build_0, false, 1);
    } else {
        build_0 = store_int(build_0, true, 1);
        build_0 = store_ref(build_0, v'c.end_cell());
    }
    var build_1 = begin_cell();
    if (null?(v'd)) {
        build_1 = store_int(build_1, false, 1);
    } else {
        build_1 = store_int(build_1, true, 1);
        build_1 = store_ref(build_1, v'd.end_cell());
    }
    build_1 = store_int(build_1, v'e, 1);
    build_1 = store_int(build_1, v'f, 257);
    build_1 = store_int(build_1, v'g, 257);
    build_1 = __tact_store_address(build_1, v'h);
    build_0 = store_ref(build_0, build_1.end_cell());
    return build_0;
}

cell __gen_writecell_C((cell, cell, slice, slice, int, int, int, slice) v) inline {
    return __gen_write_C(begin_cell(), v).end_cell();
}

slice __gen_writeslice_C((cell, cell, slice, slice, int, int, int, slice) v}) inline {
    return __gen_writecell_C(v).begin_parse();
}

((cell, cell, slice, slice, int, int, int, slice)) __gen_C_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_8(v);
}

cell __gen_writecellopt_C(tuple v) inline {
    if (null?(v)) {
        return null();
    }
    return __gen_writecell_C(__gen_C_not_null(v));
}

_ __gen_A_get_a((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'a;
}

_ __gen_A_get_b((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'b;
}

_ __gen_A_get_c((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'c;
}

_ __gen_A_get_d((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'd;
}

_ __gen_A_get_e((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'e;
}

_ __gen_A_get_f((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'f;
}

_ __gen_A_get_g((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'g;
}

((int, int, int, int, int, int, int)) __gen_A_unpack((int, int, int, int, int, int, int) v) asm "NOP";

((int, int, int, int, int, int, int)) __gen_A_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_7(v);
}

tuple __gen_A_as_optional(((int, int, int, int, int, int, int)) v) {
    return __tact_tuple_create_7(v);
}

_ __gen_B_get_a((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'a;
}

_ __gen_B_get_b((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'b;
}

_ __gen_B_get_c((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'c;
}

_ __gen_B_get_d((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'd;
}

_ __gen_B_get_e((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'e;
}

_ __gen_B_get_f((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'f;
}

_ __gen_B_get_g((int, int, int, int, int, int, int) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g) = v;
    return v'g;
}

((int, int, int, int, int, int, int)) __gen_B_unpack((int, int, int, int, int, int, int) v) asm "NOP";

((int, int, int, int, int, int, int)) __gen_B_not_null(tuple v) {
    throw_if(128, null?(v));
    return __tact_tuple_destroy_7(v);
}

tuple __gen_B_as_optional(((int, int, int, int, int, int, int)) v) {
    return __tact_tuple_create_7(v);
}

_ __gen_C_get_a((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'a;
}

_ __gen_C_get_b((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'b;
}

_ __gen_C_get_c((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'c;
}

_ __gen_C_get_d((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'd;
}

_ __gen_C_get_e((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'e;
}

_ __gen_C_get_f((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'f;
}

_ __gen_C_get_g((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'g;
}

_ __gen_C_get_h((cell, cell, slice, slice, int, int, int, slice) v) inline {
    var (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h) = v;
    return v'h;
}

((cell, cell, slice, slice, int, int, int, slice)) __gen_C_unpack((cell, cell, slice, slice, int, int, int, slice) v) asm "NOP";

tuple __gen_C_as_optional(((cell, cell, slice, slice, int, int, int, slice)) v) {
    return __tact_tuple_create_8(v);
}

(slice, ((cell, cell, slice, slice, int, int, int, slice))) __gen_read_C(slice sc_0) inline {
    var v'a = sc_0~load_ref();
    var v'b = null();
    if (sc_0~load_int(1)) {
        v'b = sc_0~load_ref();
    }
    var v'c = null();
    if (sc_0~load_int(1)) {
        v'c = sc_0~load_ref().begin_parse();
    }
    slice sc_1 = sc_0~load_ref().begin_parse();
    var v'd = null();
    if (sc_1~load_int(1)) {
        v'd = sc_1~load_ref().begin_parse();
    }
    var v'e = sc_1~load_int(1);
    var v'f = sc_1~load_int(257);
    var v'g = sc_1~load_int(257);
    var v'h = sc_1~__tact_load_address();
    return (sc_0, (v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h));
}

tuple __gen_readopt_C(cell cl) inline {
    if (null?(cl)) {
        return null();
    }
    var sc_0 = cl.begin_parse();
    var v'a = sc_0~load_ref();
    var v'b = null();
    if (sc_0~load_int(1)) {
        v'b = sc_0~load_ref();
    }
    var v'c = null();
    if (sc_0~load_int(1)) {
        v'c = sc_0~load_ref().begin_parse();
    }
    slice sc_1 = sc_0~load_ref().begin_parse();
    var v'd = null();
    if (sc_1~load_int(1)) {
        v'd = sc_1~load_ref().begin_parse();
    }
    var v'e = sc_1~load_int(1);
    var v'f = sc_1~load_int(257);
    var v'g = sc_1~load_int(257);
    var v'h = sc_1~__tact_load_address();
    return __tact_tuple_create_8(v'a, v'b, v'c, v'd, v'e, v'f, v'g, v'h);
}"
`;
